--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ swc_site: "https://software-carpentry.org"
 template_repo: "https://github.com/carpentries/styles"
 # training_site: "https://carpentries.github.io/instructor-training"
 # Using new curriculum:
-training_site: "https://data-lessons.github.io/instructor-training/"
+training_site: "https://data-lessons.github.io/instructor-training"
 workshop_repo: "https://github.com/carpentries/workshop-template"
 workshop_site: "https://carpentries.github.io/workshop-template"
 
